[package]
name = "raytracer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
image = "0.24.6"
derive_more = "0.99.17"
rayon = "1.7.0"
rand = "0.6.5"
indicatif = {version = "0.16", features = ["rayon"]}